[gd_scene load_steps=4 format=3 uid="uid://c0sbfaecaigve"]

[ext_resource type="Script" uid="uid://b45e5p2sn2b0m" path="res://scripts/main.gd" id="1_o5qli"]
[ext_resource type="Texture2D" uid="uid://bahidig403es5" path="res://cover_art/gamecube/Star Fox - Assault.jpg" id="2_0wfyh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sugp2"]
bg_color = Color(0.27451, 0.27451, 0.27451, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.48179, 0.481789, 0.481789, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="main" type="Node2D"]
script = ExtResource("1_o5qli")

[node name="emulator_selection" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="emulator_selection"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="emulator_selection"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="ScrollContainer" type="ScrollContainer" parent="emulator_selection/MarginContainer"]
layout_mode = 2

[node name="emulator_list" type="GridContainer" parent="emulator_selection/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 38
theme_override_constants/v_separation = 25
columns = 5

[node name="game_selection" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="ColorRect" type="ColorRect" parent="game_selection"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.273873, 0.273873, 0.273873, 1)

[node name="MarginContainer" type="MarginContainer" parent="game_selection"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="ScrollContainer" type="ScrollContainer" parent="game_selection/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="game_selection/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_sugp2")

[node name="MarginContainer" type="MarginContainer" parent="game_selection/MarginContainer/ScrollContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="game_list" type="GridContainer" parent="game_selection/MarginContainer/ScrollContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 38
theme_override_constants/v_separation = 25
columns = 5

[node name="TextureButton6" type="TextureButton" parent="game_selection/MarginContainer/ScrollContainer/PanelContainer/MarginContainer/game_list"]
visible = false
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
texture_normal = ExtResource("2_0wfyh")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer2" type="MarginContainer" parent="game_selection"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -134.5
offset_right = 134.5
offset_bottom = 49.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_constants/margin_top = 15

[node name="game_count" type="Label" parent="game_selection/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_font_sizes/font_size = 35
text = "Total Games: 12"
horizontal_alignment = 1
vertical_alignment = 1
